cambios en la seccion de socialmedia

--- a/componentes/socialmedia.html
+++ b/componentes/socialmedia.html
@@ -94,26 +94,28 @@
         <p><h2 class="titleh2">Redes y contacto</h2></p>
     </div>
 
-    <div class="socialmedia-container">
+    <div class="socialmedia-container row">
 
-        <div class="item-container instagram">
+        <div class="item-container instagram col-12 col-md-3">
             <a href="https://www.instagram.com/lasbronte/"><img src="../imagenes/instagram-logo.png" alt="instagram logo"></a>
-            <h3 class="socialmediatext"><a href="https://www.instagram.com/lasbronte/">Instagram</a></h3>
-
         </div>
 
-        <div class="item-container whatsapp">
+        <div class="item-container whatsapp col-12 col-md-3">
             <a href="https://wa.me/541165552731"><img src="../imagenes/whatsapp-logo.png" alt="whatsapp logo"></a>
-            <h3 class="socialmediatext"><a href="https://wa.me/541165552731">Whatsapp</a></h3>
-
         </div>
 
-        <div class="item-container gmail">
-            <img src="../imagenes/gmail-logo.png" alt="gmail logo">
-            <h3 class="socialmediatext">Lasbronteind@gmail.com</h3>
+        <div class="item-container facebook col-12 col-md-3">
+          <a href="https://www.facebook.com/lasbronte"><img src="../imagenes/facebook-logo.png" alt="facebook logo"></a>
+        </div>
+
+        <div class="item-container gmail col-12 col-md-3">
+            <div class="gmail-link">
+              <h3 class="socialmediatext gmail">Lasbronteind@gmail.com</h3>
+            </div>
         </div>
 
     </div>
+
 
   </section>
 
