se modifico footer y seccion de social media, se agrego form php

--- a/componentes/socialmedia.html
+++ b/componentes/socialmedia.html
@@ -27,6 +27,9 @@
   <!-- CSS -->
   <link rel="stylesheet" href="../css/style.css">
 
+  <!-- ICONOS -->
+  <script src="https://kit.fontawesome.com/68503e711b.js" crossorigin="anonymous"></script>
+
   <!-- Titulo -->
   <title>Las Brontë - La vida es mejor en pijama</title>
 
@@ -54,15 +57,6 @@
               <li class="nav-item">
                 <a class="nav-link active headeritem" aria-current="page" href="../index.html">Inicio</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active headeritem" aria-current="page" href="../index.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active headeritem" href="faq.html">Preguntas frecuentes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active headeritem" href="socialmedia.html">Redes</a>
-              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link active dropdown-toggle headeritem" href="#" id="navbarDropdownMenuLink" role="button"
                   data-bs-toggle="dropdown" aria-expanded="false">
@@ -74,6 +68,16 @@
                   <li><a class="dropdown-item headeritem" href="../tienda/tienda3.html">Coleccion niños</a></li>
                 </ul>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active headeritem" aria-current="page" href="../index.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active headeritem" href="faq.html">Preguntas frecuentes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active headeritem" href="socialmedia.html">Contactanos</a>
+              </li>
+
             </ul>
           </div>
         </div>
@@ -90,29 +94,39 @@
   <section class="container section-central">
 
 
-    <div class="titleh2-container">
-        <p><h2 class="titleh2">Redes y contacto</h2></p>
-    </div>
-
     <div class="socialmedia-container row">
 
-        <div class="item-container instagram col-12 col-md-3">
-            <a href="https://www.instagram.com/lasbronte/"><img src="../imagenes/instagram-logo.png" alt="instagram logo"></a>
+        <div class="icon-container col-12 col-md-4">
+          <ul><a href="#"><i class="fa fa-facebook icon-socialmedia"></i></a></ul>
+          <ul><a href="#"><i class="fa fa-instagram icon-socialmedia"></i></a></ul>
+          <ul><a href="#"><i class="fa fa-whatsapp icon-socialmedia"></i></a></ul>
         </div>
 
-        <div class="item-container whatsapp col-12 col-md-3">
-            <a href="https://wa.me/541165552731"><img src="../imagenes/whatsapp-logo.png" alt="whatsapp logo"></a>
-        </div>
-
-        <div class="item-container facebook col-12 col-md-3">
-          <a href="https://www.facebook.com/lasbronte"><img src="../imagenes/facebook-logo.png" alt="facebook logo"></a>
-        </div>
-
-        <div class="item-container gmail col-12 col-md-3">
-            <div class="gmail-link">
-              <h3 class="socialmediatext gmail">Lasbronteind@gmail.com</h3>
+        <div class="form-container whatsapp col-12 col-md-8">
+          <form action="">
+            <div class="form">
+                <h2>Contactanos</h2>
+                <div class="grupo">
+                    <input type="text" name="nombre" id="name" required><span class="barra"></span>
+                    <label>Nombre</label>
+                </div>
+                <div class="grupo">
+                    <input type="email" name="email" id="mail" required><span class="barra"></span>
+                    <label>Email</label>
+                </div>
+                <div class="grupo">
+                    <input type="subject" name="asunto" id="asunto" required><span class="barra"></span>
+                    <label>Asunto</label>
+                </div>
+                <div class="grupo">
+                    <textarea name="mensaje" id="mensaje" cols="5" rows="7" required></textarea><span class="barra"></span>
+                    <label>Mensaje</label>
+                </div>
+                <button type="submit">Enviar</button>
             </div>
+        </form>
         </div>
+
 
     </div>
 
@@ -126,34 +140,37 @@
 
   <footer class="footercontainer align-bottom">
     
-    <div class="container">
+    <div class="container footer-box">
 
-      <div class="footer-box">
 
-        <div class="row">
+      <div class="row">
 
-          <div class="footeritem col-lg col-md-12 col-sm-12">
-            <ul>
-              <li class="listend">Categorias</li>
-              <li class="item-list-first"><a href="../index.html">Inicio</a></li>
-              <li class="item-list-first"><a href="faq.html">Preguntas frecuentes</a></li>
-              <li class="item-list-first"><a href="socialmedia.html">Redes</a></li>
-            </ul>
-          </div>
-          <div class="footeritem col-lg col-md-0 col-sm-0"></div>
+        <div class="pull-left col-lg col-md-12 col-sm-12">
 
-          <div class="footeritem col-lg col-md-12 col-sm-12">
-            <ul>
-              <li class="listend">Contactanos</li>
-              <li class="item-list-two"><a href="https://wa.me/541165552731">Whatsapp</a></li>
-              <li class="item-list-two">Lasbronteind@gmail.com</li>
-            </ul>
+          <address>
+            <strong class="footer-title"><i class="fa fa-copyright" aria-hidden="true"></i> LAS BRONTE</strong>
+            <p class="footer-address">Pasaje indio 1357, San Miguel</p>
+          </address>
+  
+          <p class="phone">11-52612670</p>
+
+        </div>
+
+        <div class="col-lg col-md-0 col-sm-0"></div>
+
+        <div class="pull-rigth col-lg col-md-12 col-sm-12">
+  
+          <div class="social-links">
+
+            <a href="#"><i class="fa fa-facebook icon"></i></a>
+            <a href="#"><i class="fa fa-instagram icon"></i></a>
+            <a href="#"><i class="fa fa-whatsapp icon"></i></a>
+  
           </div>
 
         </div>
 
       </div>
-
       
     </div>
 
