--- a/componentes/faq.html
+++ b/componentes/faq.html
@@ -27,6 +27,9 @@
   <!-- CSS -->
   <link rel="stylesheet" href="../css/style.css">
 
+  <!-- ICONOS -->
+  <script src="https://kit.fontawesome.com/68503e711b.js" crossorigin="anonymous"></script>
+
   <!-- Titulo -->
   <title>Las Brontë - La vida es mejor en pijama</title>
 
@@ -54,15 +57,6 @@
               <li class="nav-item">
                 <a class="nav-link active headeritem" aria-current="page" href="../index.html">Inicio</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active headeritem" aria-current="page" href="../index.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active headeritem" href="faq.html">Preguntas frecuentes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active headeritem" href="socialmedia.html">Redes</a>
-              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link active dropdown-toggle headeritem" href="#" id="navbarDropdownMenuLink" role="button"
                   data-bs-toggle="dropdown" aria-expanded="false">
@@ -73,6 +67,15 @@
                   <li><a class="dropdown-item headeritem" href="../tienda/tienda1.html">Coleccion verano</a></li>
                   <li><a class="dropdown-item headeritem" href="../tienda/tienda3.html">Coleccion niños</a></li>
                 </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active headeritem" aria-current="page" href="../index.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active headeritem" href="faq.html">Preguntas frecuentes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active headeritem" href="socialmedia.html">Contactanos</a>
               </li>
             </ul>
           </div>
@@ -240,34 +243,37 @@
 
   <footer class="footercontainer align-bottom">
     
-    <div class="container">
+    <div class="container footer-box">
 
-      <div class="footer-box">
 
-        <div class="row">
+      <div class="row">
 
-          <div class="footeritem col-lg col-md-12 col-sm-12">
-            <ul>
-              <li class="listend">Categorias</li>
-              <li class="item-list-first"><a href="../index.html">Inicio</a></li>
-              <li class="item-list-first"><a href="faq.html">Preguntas frecuentes</a></li>
-              <li class="item-list-first"><a href="socialmedia.html">Redes</a></li>
-            </ul>
-          </div>
-          <div class="footeritem col-lg col-md-0 col-sm-0"></div>
+        <div class="pull-left col-lg col-md-12 col-sm-12">
 
-          <div class="footeritem col-lg col-md-12 col-sm-12">
-            <ul>
-              <li class="listend">Contactanos</li>
-              <li class="item-list-two"><a href="https://wa.me/541165552731">Whatsapp</a></li>
-              <li class="item-list-two">Lasbronteind@gmail.com</li>
-            </ul>
+          <address>
+            <strong class="footer-title"><i class="fa fa-copyright" aria-hidden="true"></i> LAS BRONTE</strong>
+            <p class="footer-address">Pasaje indio 1357, San Miguel</p>
+          </address>
+  
+          <p class="phone">11-52612670</p>
+
+        </div>
+
+        <div class="col-lg col-md-0 col-sm-0"></div>
+
+        <div class="pull-rigth col-lg col-md-12 col-sm-12">
+  
+          <div class="social-links">
+
+            <a href="#"><i class="fa fa-facebook icon"></i></a>
+            <a href="#"><i class="fa fa-instagram icon"></i></a>
+            <a href="#"><i class="fa fa-whatsapp icon"></i></a>
+  
           </div>
 
         </div>
 
       </div>
-
       
     </div>
 
