se agregaron links y urls

--- a/componentes/socialmedia.html
+++ b/componentes/socialmedia.html
@@ -97,9 +97,9 @@
     <div class="socialmedia-container row">
 
         <div class="icon-container col-12 col-md-4">
-          <ul><a href="#"><i class="fa fa-facebook icon-socialmedia"></i></a></ul>
-          <ul><a href="#"><i class="fa fa-instagram icon-socialmedia"></i></a></ul>
-          <ul><a href="#"><i class="fa fa-whatsapp icon-socialmedia"></i></a></ul>
+          <ul><a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook icon-socialmedia"></i></a></ul>
+          <ul><a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon-socialmedia"></i></a></ul>
+          <ul><a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon-socialmedia"></i></a></ul>
         </div>
 
         <div class="form-container whatsapp col-12 col-md-8">
@@ -162,9 +162,9 @@
   
           <div class="social-links">
 
-            <a href="#"><i class="fa fa-facebook icon"></i></a>
-            <a href="#"><i class="fa fa-instagram icon"></i></a>
-            <a href="#"><i class="fa fa-whatsapp icon"></i></a>
+            <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook icon"></i></a>
+            <a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon"></i></a>
+            <a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon"></i></a>
   
           </div>
 
