se modifica icono de facebook

--- a/componentes/socialmedia.html
+++ b/componentes/socialmedia.html
@@ -97,7 +97,7 @@
     <div class="socialmedia-container row">
 
         <div class="icon-container col-12 col-md-4">
-          <ul><a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook icon-socialmedia"></i></a></ul>
+          <ul><a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-squar icon-socialmedia"></i></a></ul>
           <ul><a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon-socialmedia"></i></a></ul>
           <ul><a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon-socialmedia"></i></a></ul>
         </div>
@@ -162,7 +162,7 @@
   
           <div class="social-links">
 
-            <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook icon"></i></a>
+            <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-squar icon"></i></a>
             <a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon"></i></a>
             <a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon"></i></a>
   
