--- a/tienda/tienda2.html
+++ b/tienda/tienda2.html
@@ -167,7 +167,7 @@
   
           <div class="social-links">
 
-            <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook icon"></i></a>
+            <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-squar icon"></i></a>
             <a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon"></i></a>
             <a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon"></i></a>
   
