se resolvieron problemas de iconos

--- a/componentes/socialmedia.html
+++ b/componentes/socialmedia.html
@@ -97,9 +97,9 @@
     <div class="socialmedia-container row">
 
         <div class="icon-container col-12 col-md-4">
-          <ul><a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-squar icon-socialmedia"></i></a></ul>
-          <ul><a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon-socialmedia"></i></a></ul>
-          <ul><a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon-socialmedia"></i></a></ul>
+          <ul>            <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-square icon-socialmedia" aria-hidden="true"></i></a></ul>
+          <ul><a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon-socialmedia" aria-hidden="true"></i></a></ul>
+          <ul><a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon-socialmedia" aria-hidden="true"></i></a></ul>
         </div>
 
         <div class="form-container whatsapp col-12 col-md-8">
@@ -162,9 +162,9 @@
   
           <div class="social-links">
 
-            <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-squar icon"></i></a>
-            <a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon"></i></a>
-            <a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon"></i></a>
+            <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-square icon" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon" aria-hidden="true"></i></a>
+            <a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon" aria-hidden="true"></i></a>
   
           </div>
 
