se modifico footer y colores, se agrego contenido

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
   <footer class="footercontainer align-bottom">
     
-    <div class="container footer-box">
+    <div class="footer-box">
 
 
       <div class="row">
