--- a/tienda/tienda1.html
+++ b/tienda/tienda1.html
@@ -144,6 +144,43 @@
           </div>
         </div>
 
+        <div class="col-12 col-sm-12 col-md-4">
+          <div class="shop-card">
+            <div class="card" style="width: 18rem;">
+            <img src="../imagenes/verano/pijama5.jpg" class="card-img-top" alt="Pijama mikey">
+              <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+                <a href="#" class="btn btn-primary boton-cards">$200</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-12 col-sm-12 col-md-4">
+          <div class="shop-card">
+            <div class="card" style="width: 18rem;">
+            <img src="../imagenes/verano/pijama6.jpg" class="card-img-top" alt="Pijama lunas">
+              <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+                <a href="#" class="btn btn-primary boton-cards">$200</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-12 col-sm-12 col-md-4">
+          <div class="shop-card">
+            <div class="card" style="width: 18rem;">
+            <img src="../imagenes/verano/pijama8.jpg" class="card-img-top" alt="Pijama perrito">
+              <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+                <a href="#" class="btn btn-primary boton-cards">$200</a>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
 
@@ -199,7 +236,7 @@
 
   <footer class="footercontainer align-bottom">
     
-    <div class="container footer-box">
+    <div class="footer-box">
 
 
       <div class="row">
