--- a/tienda/tienda2.html
+++ b/tienda/tienda2.html
@@ -131,9 +131,47 @@
           </div>
         </div>
 
+        <div class="col-12 col-sm-12 col-md-4">
+          <div class="shop-card">
+            <div class="card" style="width: 18rem;">
+            <img src="../imagenes/invierno/pijama3.jpg" class="card-img-top" alt="Pijama buzo estrellitas beige">
+              <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+                <a href="#" class="btn btn-primary boton-cards">$200</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-sm-12 col-md-4">
+          <div class="shop-card">
+            <div class="card" style="width: 18rem;">
+            <img src="../imagenes/invierno/pijama2.jpg" class="card-img-top" alt="Pijama buzo marron">
+              <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+                <a href="#" class="btn btn-primary boton-cards">$200</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-sm-12 col-md-4">
+          <div class="shop-card">
+            <div class="card" style="width: 18rem;">
+            <img src="../imagenes/invierno/pijama3.jpg" class="card-img-top" alt="Pijama buzo estrellitas beige">
+              <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+                <a href="#" class="btn btn-primary boton-cards">$200</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
 
     </div>
+
+    
 
   </section>
 
@@ -145,7 +183,7 @@
 
   <footer class="footercontainer align-bottom">
     
-    <div class="container footer-box">
+    <div class="footer-box">
 
 
       <div class="row">
