--- a/componentes/socialmedia.html
+++ b/componentes/socialmedia.html
@@ -105,7 +105,7 @@
         <div class="form-container whatsapp col-12 col-md-8">
           <form action="enviar.php" method="POST" name="contact-form">
             <div class="form">
-                <h2>Contactanos</h2>
+                <h2 class="container form">Contactanos</h2>
                 <div class="grupo">
                     <input type="text" name="nombre" id="name" required><span class="barra"></span>
                     <label for="name">Nombre</label>
@@ -140,7 +140,7 @@
 
   <footer class="footercontainer align-bottom">
     
-    <div class="container footer-box">
+    <div class="footer-box">
 
 
       <div class="row">
