--- a/tienda/tienda3.html
+++ b/tienda/tienda3.html
@@ -96,7 +96,62 @@
         <div class="col-12 col-sm-12 col-md-4">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
-            <img src="../imagenes/niños/pijama7.jpg" class="card-img-top" alt="Pijama niños">
+            <img src="../imagenes/invierno/pijama2.jpg" class="card-img-top" alt="Pijama niños">
+              <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+                <a href="#" class="btn btn-primary boton-cards">$200</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-4">
+          <div class="shop-card">
+            <div class="card" style="width: 18rem;">
+            <img src="../imagenes/invierno/pijama2.jpg" class="card-img-top" alt="Pijama niños">
+              <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+                <a href="#" class="btn btn-primary boton-cards">$200</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-4">
+          <div class="shop-card">
+            <div class="card" style="width: 18rem;">
+            <img src="../imagenes/invierno/pijama2.jpg" class="card-img-top" alt="Pijama niños">
+              <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+                <a href="#" class="btn btn-primary boton-cards">$200</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-4">
+          <div class="shop-card">
+            <div class="card" style="width: 18rem;">
+            <img src="../imagenes/invierno/pijama2.jpg" class="card-img-top" alt="Pijama niños">
+              <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+                <a href="#" class="btn btn-primary boton-cards">$200</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-4">
+          <div class="shop-card">
+            <div class="card" style="width: 18rem;">
+            <img src="../imagenes/invierno/pijama2.jpg" class="card-img-top" alt="Pijama niños">
+              <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+                <a href="#" class="btn btn-primary boton-cards">$200</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-4">
+          <div class="shop-card">
+            <div class="card" style="width: 18rem;">
+            <img src="../imagenes/invierno/pijama2.jpg" class="card-img-top" alt="Pijama niños">
               <div class="card-body">
               <h5 class="card-title">Card title</h5>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
@@ -108,6 +163,7 @@
       </div>
 
     </div>
+    
 
   </section>
 
@@ -117,7 +173,7 @@
 
   <footer class="footercontainer align-bottom">
     
-    <div class="container footer-box">
+    <div class="footer-box">
 
 
       <div class="row">
