--- a/componentes/socialmedia.html
+++ b/componentes/socialmedia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -39,7 +39,7 @@
 
   <!-- TOP MENU -->
 
-  <Header class="headercontainer sticky-top">
+  <header class="headercontainer sticky-top">
 
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
@@ -84,10 +84,7 @@
       </nav>
     </div>
 
-  </Header>
-
-
-
+  </header>
 
 
 
