--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -39,7 +39,7 @@
 
   <!-- TOP MENU -->
 
-  <Header class="headercontainer sticky-top">
+  <header class="headercontainer sticky-top">
 
     <div class="container">
 
@@ -93,7 +93,7 @@
 
     </div>
 
-  </Header>
+  </header>
 
 
 
@@ -125,21 +125,21 @@
               <div class="carousel-item active">
               <img src="imagenes/carousel-img/carousel1.jpg" class="d-block w-100" alt="Buzo pijama rosa">
               <div class="carousel-caption d-none d-md-block carouselfont">
-                <h5>Buzo Rosa</h5>
+                <h2 class="carousel-title">Buzo Rosa</h2>
               </div>
             </div>
 
             <div class="carousel-item">
               <img src="imagenes/carousel-img/carousel2.jpg" class="d-block w-100" alt="Buzo pijama marron">
               <div class="carousel-caption d-none d-md-block carouselfont">
-                <h5>Buzo Beige</h5>
+                <h2 class="carousel-title">Buzo Beige</h2>
               </div>
             </div>
 
             <div class="carousel-item">
               <img src="imagenes/carousel-img/carousel3.jpg" class="d-block w-100" alt="Pijama verano gatitos">
               <div class="carousel-caption d-none d-md-block carouselfont">
-                <h5>Pijama Vaquitas</h5>
+                <h2 class="carousel-title">Pijama Vaquitas</h2>
               </div>
             </div>
 
@@ -183,31 +183,31 @@
     <div class="row card-container" id="nosotros">
 
 
-      <div class="col-12 col-md-4 cardbox">
+      <div class="col-12 col-sm-12 col-md-4 cardbox card-aling">
         <div class="card cardbox-index" style="width: 18rem;">
           <img src="imagenes/invierno/pijama3.jpg" class="card-img-top" alt="Buzo pijama gris">
           <div class="card-body">
-            <h5 class="card-title">Coleccion Invierno</h5>
+            <h2 class="card-title">Coleccion Invierno</h2>
             <a href="tienda/tienda2.html" class="btn btn-primary boton-cards">Ver Coleccion</a>
           </div>
         </div>
       </div>
 
-      <div class="col-12 col-md-4 cardbox">
+      <div class="col-12 col-sm-12 col-md-4 cardbox card-aling">
         <div class="card cardbox-index" style="width: 18rem;">
           <img src="imagenes/verano/pijama6.jpg" class="card-img-top" alt="Pijama lunas">
           <div class="card-body">
-            <h5 class="card-title">Coleccion Verano</h5>
+            <h2 class="card-title">Coleccion Verano</h2>
             <a href="tienda/tienda1.html" class="btn btn-primary boton-cards">Ver Coleccion</a>
           </div>
         </div>
       </div>
 
-      <div class="col-12 col-md-4 cardbox">
+      <div class="col-12 col-sm-12 col-md-4 cardbox card-aling">
         <div class="card cardbox-index" style="width: 18rem;">
-          <img src="imagenes/niños/pijama7.jpg" class="card-img-top" alt="Pijama niños">
+          <img src="imagenes/verano/pijama4.jpg" class="card-img-top" alt="Pijama niños">
           <div class="card-body">
-            <h5 class="card-title">Coleccion Niños</h5>
+            <h2 class="card-title">Coleccion Niños</h2>
             <a href="tienda/tienda3.html" class="btn btn-primary boton-cards">Ver Coleccion</a>
           </div>
         </div>
