--- a/tienda/tienda1.html
+++ b/tienda/tienda1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -39,7 +39,7 @@
 
   <!-- TOP MENU -->
 
-  <Header class="headercontainer sticky-top">
+  <header class="headercontainer sticky-top">
 
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
@@ -84,7 +84,7 @@
       </nav>
     </div>
 
-  </Header>
+  </header>
 
 
   <section>
@@ -93,12 +93,12 @@
       
       <div class="row">
 
-        <div class="col-12 col-sm-12 col-md-4">
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
             <img src="../imagenes/verano/pijama4.jpg" class="card-img-top" alt="Pijama netflix">
               <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
               </div>
             </div>
@@ -106,12 +106,12 @@
         </div>
 
 
-        <div class="col-12 col-sm-12 col-md-4">
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
             <img src="../imagenes/verano/pijama5.jpg" class="card-img-top" alt="Pijama mikey">
               <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
               </div>
             </div>
@@ -119,12 +119,12 @@
         </div>
 
 
-        <div class="col-12 col-sm-12 col-md-4">
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
             <img src="../imagenes/verano/pijama6.jpg" class="card-img-top" alt="Pijama lunas">
               <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
               </div>
             </div>
@@ -132,24 +132,24 @@
         </div>
 
 
-        <div class="col-12 col-sm-12 col-md-4">
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
             <img src="../imagenes/verano/pijama8.jpg" class="card-img-top" alt="Pijama perrito">
               <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-12 col-sm-12 col-md-4">
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
             <img src="../imagenes/verano/pijama5.jpg" class="card-img-top" alt="Pijama mikey">
               <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
               </div>
             </div>
@@ -157,12 +157,12 @@
         </div>
 
 
-        <div class="col-12 col-sm-12 col-md-4">
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
             <img src="../imagenes/verano/pijama6.jpg" class="card-img-top" alt="Pijama lunas">
               <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
               </div>
             </div>
@@ -170,12 +170,12 @@
         </div>
 
 
-        <div class="col-12 col-sm-12 col-md-4">
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
             <img src="../imagenes/verano/pijama8.jpg" class="card-img-top" alt="Pijama perrito">
               <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
               </div>
             </div>
@@ -187,49 +187,6 @@
     </div>
 
   </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-
 
 
 
