--- a/tienda/tienda3.html
+++ b/tienda/tienda3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -39,7 +39,7 @@
 
   <!-- TOP MENU -->
 
-  <Header class="headercontainer sticky-top">
+  <header class="headercontainer sticky-top">
 
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
@@ -84,7 +84,7 @@
       </nav>
     </div>
 
-  </Header>
+  </header>
 
 
   <section>
@@ -93,67 +93,67 @@
       
       <div class="row">
 
-        <div class="col-12 col-sm-12 col-md-4">
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
             <img src="../imagenes/invierno/pijama2.jpg" class="card-img-top" alt="Pijama niños">
               <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-12 col-md-4">
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
             <img src="../imagenes/invierno/pijama2.jpg" class="card-img-top" alt="Pijama niños">
               <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-12 col-md-4">
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
             <img src="../imagenes/invierno/pijama2.jpg" class="card-img-top" alt="Pijama niños">
               <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-12 col-md-4">
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
             <img src="../imagenes/invierno/pijama2.jpg" class="card-img-top" alt="Pijama niños">
               <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-12 col-md-4">
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
             <img src="../imagenes/invierno/pijama2.jpg" class="card-img-top" alt="Pijama niños">
               <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-12 col-md-4">
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
             <img src="../imagenes/invierno/pijama2.jpg" class="card-img-top" alt="Pijama niños">
               <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
               </div>
             </div>
@@ -166,8 +166,6 @@
     
 
   </section>
-
-
 
 
 
