--- a/componentes/faq.html
+++ b/componentes/faq.html
@@ -188,34 +188,31 @@
     <div class="footer-box">
 
 
-      <div class="row">
 
-        <div class="pull-left col-lg col-md-12 col-sm-12">
+
+        <div class="pull-left">
 
           <address>
-            <strong class="footer-title"><i class="fa fa-copyright" aria-hidden="true"></i> LAS BRONTE</strong>
+            <strong class="footer-title"><i class="fa fa-copyright" aria-hidden="true"></i>LAS BRONTE</strong>
             <p class="footer-address">Pasaje indio 1357, San Miguel</p>
           </address>
   
-          <p class="phone">11-52612670</p>
 
         </div>
 
-        <div class="col-lg col-md-0 col-sm-0"></div>
-
-        <div class="pull-rigth col-lg col-md-12 col-sm-12">
+        <div class="pull-rigth social-links">
   
-          <div class="social-links">
 
-            <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-square icon" aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon" aria-hidden="true"></i></a>
-            <a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon" aria-hidden="true"></i></a>
+
+          <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-square icon" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon" aria-hidden="true"></i></a>
+          <a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon" aria-hidden="true"></i></a>
   
-          </div>
+
 
         </div>
 
-      </div>
+
       
     </div>
 
