--- a/componentes/socialmedia.html
+++ b/componentes/socialmedia.html
@@ -93,40 +93,50 @@
 
     <div class="socialmedia-container row">
 
-        <div class="icon-container col-12 col-md-4">
-          <ul>            <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-square icon-socialmedia" aria-hidden="true"></i></a></ul>
-          <ul><a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon-socialmedia" aria-hidden="true"></i></a></ul>
-          <ul><a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon-socialmedia" aria-hidden="true"></i></a></ul>
-        </div>
+      <div class="icon-container col-12 col-md-4">
+        <ul><a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-square icon-socialmedia" aria-hidden="true"></i></a></ul>
+        <ul><a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon-socialmedia" aria-hidden="true"></i></a></ul>
+        <ul><a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon-socialmedia" aria-hidden="true"></i></a></ul>
+      </div>
 
-        <div class="form-container whatsapp col-12 col-md-8">
-          <form action="enviar.php" method="POST" name="contact-form">
-            <div class="form">
-                <h2 class="container form">Contactanos</h2>
-                <div class="grupo">
-                    <input type="text" name="nombre" id="name" required><span class="barra"></span>
-                    <label for="name">Nombre</label>
-                </div>
-                <div class="grupo">
-                    <input type="email" name="email" id="mail" required><span class="barra"></span>
-                    <label for="mail" >Email</label>
-                </div>
-                <div class="grupo">
-                    <input type="subject" name="asunto" id="asunto" required><span class="barra"></span>
-                    <label for="">Asunto</label>
-                </div>
-                <div class="grupo">
-                    <textarea name="mensaje" id="mensaje" cols="5" rows="7" required></textarea><span class="barra"></span>
-                    <label for="">Mensaje</label>
-                </div>
+      <div class="form-container whatsapp col-12 col-md-8">
+        <form action="enviar.php" method="POST" name="contact-form">
+          <div class="form">
+            <h2 class="container form">Contactanos</h2>
+
+              <div class="grupo">
+                <input type="text" name="nombre" id="name" required><span class="barra"></span>
+                <label for="name">Nombre</label>
+              </div>
+
+              <div class="grupo">
+                <input type="email" name="email" id="mail" required><span class="barra"></span>
+                <label for="mail" >Email</label>
+              </div>
+
+              <div class="grupo">
+                <input type="subject" name="asunto" id="asunto" required><span class="barra"></span>
+                <label for="">Asunto</label>
+              </div>
+
+              <div class="grupo">
+                <textarea name="mensaje" id="mensaje" cols="5" rows="7" required></textarea><span class="barra"></span>
+                <label for="">Mensaje</label>
+              </div>
+
+              <div>
                 <button type="submit" value="enviar">Enviar</button>
-            </div>
+              </div>
+          </div>
         </form>
-        </div>
+      </div>
 
 
     </div>
 
+    <div class="mapa">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.546444616559!2d-58.70513293547025!3d-34.5397173731361!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbd101f3b7e39%3A0x5a72a4604b0804a9!2sPje.%20Indio%201357%2C%20B1663GZA%20San%20Miguel%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1626217160697!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
 
   </section>
 
@@ -140,34 +150,31 @@
     <div class="footer-box">
 
 
-      <div class="row">
 
-        <div class="pull-left col-lg col-md-12 col-sm-12">
+
+        <div class="pull-left">
 
           <address>
-            <strong class="footer-title"><i class="fa fa-copyright" aria-hidden="true"></i> LAS BRONTE</strong>
+            <strong class="footer-title"><i class="fa fa-copyright" aria-hidden="true"></i>LAS BRONTE</strong>
             <p class="footer-address">Pasaje indio 1357, San Miguel</p>
           </address>
   
-          <p class="phone">11-52612670</p>
 
         </div>
 
-        <div class="col-lg col-md-0 col-sm-0"></div>
-
-        <div class="pull-rigth col-lg col-md-12 col-sm-12">
+        <div class="pull-rigth social-links">
   
-          <div class="social-links">
 
-            <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-square icon" aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon" aria-hidden="true"></i></a>
-            <a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon" aria-hidden="true"></i></a>
+
+          <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-square icon" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon" aria-hidden="true"></i></a>
+          <a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon" aria-hidden="true"></i></a>
   
-          </div>
+
 
         </div>
 
-      </div>
+
       
     </div>
 
