--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Boostrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
@@ -180,7 +180,15 @@
     </div>
 
 
-    <div class="row card-container" id="nosotros">
+    <div id="nosotros" class="titlenosotros-container">
+
+      <h2 class="nosotros-title">La vida es mejor en pijama</h2>
+
+    </div>
+
+
+
+    <div class="row card-container">
 
 
       <div class="col-12 col-sm-12 col-md-4 cardbox card-aling">
@@ -222,39 +230,37 @@
 
 
 
+
   <footer class="footercontainer align-bottom">
     
     <div class="footer-box">
 
 
-      <div class="row">
 
-        <div class="pull-left col-lg col-md-12 col-sm-12">
+
+        <div class="pull-left">
 
           <address>
-            <strong class="footer-title"><i class="fa fa-copyright" aria-hidden="true"></i> LAS BRONTE</strong>
+            <strong class="footer-title"><i class="fa fa-copyright" aria-hidden="true"></i>LAS BRONTE</strong>
             <p class="footer-address">Pasaje indio 1357, San Miguel</p>
           </address>
   
-          <p class="phone">11-52612670</p>
 
         </div>
 
-        <div class="col-lg col-md-0 col-sm-0"></div>
-
-        <div class="pull-rigth col-lg col-md-12 col-sm-12">
+        <div class="pull-rigth social-links">
   
-          <div class="social-links">
 
-            <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-square icon" aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon" aria-hidden="true"></i></a>
-            <a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon" aria-hidden="true"></i></a>
+
+          <a href="https://www.facebook.com/lasbronte"><i class="fa fa-facebook-square icon" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/lasbronte/"><i class="fa fa-instagram icon" aria-hidden="true"></i></a>
+          <a href="https://wa.me/541165552731"><i class="fa fa-whatsapp icon" aria-hidden="true"></i></a>
   
-          </div>
+
 
         </div>
 
-      </div>
+
       
     </div>
 
