agregado de seo y extras

--- a/componentes/faq.html
+++ b/componentes/faq.html
@@ -7,19 +7,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
 
-
+  
 
   <!-- METAETIQUETAS -->
-  <meta name="keywords" content="pijamas, ropa, venta, buzos, "> 
+  <meta name="keywords" content="pijamas, ropa, venta, buzos, pantalones, remeras, remerones, niños, mujer, hombre, unisex, talles, variedad"> 
 
 
   <!-- PROTOCOLO OPEN GRAPH -->
   <meta property="og:title" content="Las Brontë - La vida es mejor en pijama"> 
-  <meta property="og:image" content="html"> 
+  <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpN0nTh0QunB7nfGEPZzp1xVeN2MheecM6C2VcWxUfgZ2BQx8O1dxMKu1Z9nkclCII5uw&usqp=CAU"> 
   <meta property="og:autor" content="Francisco Iacona"> 
-  <meta property="og:description" content="Pagina de venta de pijamas"> 
+  <meta property="og:description" content="Pagina de venta de pijamas unisex, para niños y adultos, talles inclusivos y variedad"> 
 
-
+  
   <!-- Boostrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
