--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
 
-
+  
 
   <!-- METAETIQUETAS -->
-  <meta name="keywords" content="pijamas, ropa, venta, buzos, "> 
+  <meta name="keywords" content="pijamas, ropa, venta, buzos, pantalones, remeras, remerones, niños, mujer, hombre, unisex, talles, variedad"> 
 
 
   <!-- PROTOCOLO OPEN GRAPH -->
   <meta property="og:title" content="Las Brontë - La vida es mejor en pijama"> 
-  <meta property="og:image" content="html"> 
+  <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpN0nTh0QunB7nfGEPZzp1xVeN2MheecM6C2VcWxUfgZ2BQx8O1dxMKu1Z9nkclCII5uw&usqp=CAU"> 
   <meta property="og:autor" content="Francisco Iacona"> 
-  <meta property="og:description" content="Pagina de venta de pijamas"> 
+  <meta property="og:description" content="Pagina de venta de pijamas unisex, para niños y adultos, talles inclusivos y variedad"> 
 
 
   <!-- Boostrap -->
@@ -45,7 +45,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-light">
 
-        <div class="container-fluid">
+        <div class="container-fluid boton-header">
 
           <a class="navbar-brand" href="index.html">
             <h1 class="title">Las Brontë</h1>
@@ -123,21 +123,21 @@
           <div class="carousel-inner">
 
               <div class="carousel-item active">
-              <img src="imagenes/carousel-img/carousel1.jpg" class="d-block w-100" alt="Buzo pijama rosa">
+              <img src="imagenes/carousel-img/carousel1.jpg" class="d-block w-100 photo-carousel" alt="Buzo pijama rosa">
               <div class="carousel-caption d-none d-md-block carouselfont">
                 <h2 class="carousel-title">Buzo Rosa</h2>
               </div>
             </div>
 
             <div class="carousel-item">
-              <img src="imagenes/carousel-img/carousel2.jpg" class="d-block w-100" alt="Buzo pijama marron">
+              <img src="imagenes/carousel-img/carousel2.jpg" class="d-block w-100 photo-carousel" alt="Buzo pijama marron">
               <div class="carousel-caption d-none d-md-block carouselfont">
                 <h2 class="carousel-title">Buzo Beige</h2>
               </div>
             </div>
 
             <div class="carousel-item">
-              <img src="imagenes/carousel-img/carousel3.jpg" class="d-block w-100" alt="Pijama verano gatitos">
+              <img src="imagenes/carousel-img/carousel3.jpg" class="d-block w-100 photo-carousel" alt="Pijama verano gatitos">
               <div class="carousel-caption d-none d-md-block carouselfont">
                 <h2 class="carousel-title">Pijama Vaquitas</h2>
               </div>
@@ -193,7 +193,7 @@
 
       <div class="col-12 col-sm-12 col-md-4 cardbox card-aling">
         <div class="card cardbox-index" style="width: 18rem;">
-          <img src="imagenes/invierno/pijama3.jpg" class="card-img-top" alt="Buzo pijama gris">
+          <img src="imagenes/invierno/pijama3.jpg" class="card-img-top photo-card" alt="Buzo pijama gris">
           <div class="card-body">
             <h2 class="card-title">Coleccion Invierno</h2>
             <a href="tienda/tienda2.html" class="btn btn-primary boton-cards">Ver Coleccion</a>
@@ -203,7 +203,7 @@
 
       <div class="col-12 col-sm-12 col-md-4 cardbox card-aling">
         <div class="card cardbox-index" style="width: 18rem;">
-          <img src="imagenes/verano/pijama6.jpg" class="card-img-top" alt="Pijama lunas">
+          <img src="imagenes/verano/pijama6.jpg" class="card-img-top photo-card" alt="Pijama lunas">
           <div class="card-body">
             <h2 class="card-title">Coleccion Verano</h2>
             <a href="tienda/tienda1.html" class="btn btn-primary boton-cards">Ver Coleccion</a>
@@ -213,7 +213,7 @@
 
       <div class="col-12 col-sm-12 col-md-4 cardbox card-aling">
         <div class="card cardbox-index" style="width: 18rem;">
-          <img src="imagenes/verano/pijama4.jpg" class="card-img-top" alt="Pijama niños">
+          <img src="imagenes/verano/pijama4.jpg" class="card-img-top photo-card" alt="Pijama niños">
           <div class="card-body">
             <h2 class="card-title">Coleccion Niños</h2>
             <a href="tienda/tienda3.html" class="btn btn-primary boton-cards">Ver Coleccion</a>
