--- a/tienda/tienda1.html
+++ b/tienda/tienda1.html
@@ -8,18 +8,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
 
 
-
+  
   <!-- METAETIQUETAS -->
-  <meta name="keywords" content="pijamas, ropa, venta, buzos, "> 
+  <meta name="keywords" content="pijamas, ropa, venta, buzos, pantalones, remeras, remerones, niños, mujer, hombre, unisex, talles, variedad"> 
 
 
   <!-- PROTOCOLO OPEN GRAPH -->
   <meta property="og:title" content="Las Brontë - La vida es mejor en pijama"> 
-  <meta property="og:image" content="html"> 
+  <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpN0nTh0QunB7nfGEPZzp1xVeN2MheecM6C2VcWxUfgZ2BQx8O1dxMKu1Z9nkclCII5uw&usqp=CAU"> 
   <meta property="og:autor" content="Francisco Iacona"> 
-  <meta property="og:description" content="Pagina de venta de pijamas"> 
+  <meta property="og:description" content="Pagina de venta de pijamas unisex, para niños y adultos, talles inclusivos y variedad"> 
 
-
+  
   <!-- Boostrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -96,7 +96,7 @@
         <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
-            <img src="../imagenes/verano/pijama4.jpg" class="card-img-top" alt="Pijama netflix">
+            <img src="../imagenes/verano/pijama4.jpg" class="card-img-top photo-card" alt="Pijama netflix">
               <div class="card-body">
               <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
@@ -109,7 +109,7 @@
         <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
-            <img src="../imagenes/verano/pijama5.jpg" class="card-img-top" alt="Pijama mikey">
+            <img src="../imagenes/verano/pijama5.jpg" class="card-img-top photo-card" alt="Pijama mikey">
               <div class="card-body">
               <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
@@ -122,7 +122,7 @@
         <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
-            <img src="../imagenes/verano/pijama6.jpg" class="card-img-top" alt="Pijama lunas">
+            <img src="../imagenes/verano/pijama6.jpg" class="card-img-top photo-card" alt="Pijama lunas">
               <div class="card-body">
               <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
@@ -135,7 +135,7 @@
         <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
-            <img src="../imagenes/verano/pijama8.jpg" class="card-img-top" alt="Pijama perrito">
+            <img src="../imagenes/verano/pijama8.jpg" class="card-img-top photo-card" alt="Pijama perrito">
               <div class="card-body">
               <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
@@ -147,20 +147,7 @@
         <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
-            <img src="../imagenes/verano/pijama5.jpg" class="card-img-top" alt="Pijama mikey">
-              <div class="card-body">
-              <h2 class="card-title">Card title</h2>
-                <a href="#" class="btn btn-primary boton-cards">$200</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="col-12 col-sm-12 col-md-4 card-aling">
-          <div class="shop-card">
-            <div class="card" style="width: 18rem;">
-            <img src="../imagenes/verano/pijama6.jpg" class="card-img-top" alt="Pijama lunas">
+            <img src="../imagenes/verano/pijama5.jpg" class="card-img-top photo-card" alt="Pijama mikey">
               <div class="card-body">
               <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
@@ -173,7 +160,20 @@
         <div class="col-12 col-sm-12 col-md-4 card-aling">
           <div class="shop-card">
             <div class="card" style="width: 18rem;">
-            <img src="../imagenes/verano/pijama8.jpg" class="card-img-top" alt="Pijama perrito">
+            <img src="../imagenes/verano/pijama6.jpg" class="card-img-top photo-card" alt="Pijama lunas">
+              <div class="card-body">
+              <h2 class="card-title">Card title</h2>
+                <a href="#" class="btn btn-primary boton-cards">$200</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-12 col-sm-12 col-md-4 card-aling">
+          <div class="shop-card">
+            <div class="card" style="width: 18rem;">
+            <img src="../imagenes/verano/pijama8.jpg" class="card-img-top photo-card" alt="Pijama perrito">
               <div class="card-body">
               <h2 class="card-title">Card title</h2>
                 <a href="#" class="btn btn-primary boton-cards">$200</a>
